src/tests/snapshots/niri__tests__window_opening__check_target_size@ofT-dhF500-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-floating true\n    default-window-height { fixed 500; }\n}"
expression: snapshot
snapshot_kind: text
---
initial configure:
size: 0 × 500, bounds: 1280 × 720, states: []

post-map configures:
size: 0 × 500, bounds: 1280 × 720, states: []
size: 1 × 500, bounds: 1280 × 720, states: [Activated]
